# Soko

./: .gitignore  README.md  ape-config.yaml  pyproject.toml
contracts/dependencies/: AddressWhitelistContract.sol  AncillaryDataInterface.sol  FinderContract.sol  IdentifierWhitelist.sol  MockAncillaryContract.sol  OOV3.sol  StoreContract.sol
contracts/src/: Experiment.vy  OutComeTokenFactory.vy  ctf-adapter.vy  experiment.vy
contracts/src/ctf-exchange/interfaces/: IAssetOperartions.vyi  IAssets.vyi  IAuth.vyi  IConditionalTokens.vyi  IFees.vyi  IHashing.vyi
contracts/src/interfaces/: IOptimisticOracleV3Interface.vyi
contracts/src/modules/: DefaultCurrency.vy  ExpandedERC20.vy  constants.vy
contracts/src/modules/interfaces/: ExpandedIERC20.vyi  IERC20.vyi
scripts/: constants.py  deployments.json  market.py  sand_box.py  test.py  test1.py  utils.py  vy.py
scripts/oracle_sand_box/: constants.py  deploy.py  oracle.py  utils.py
